---
config:
  theme: base
  # fontFamily precisa ser chave de topo — dentro de themeVariables é ignorada
  fontFamily: "Helvetica Neue, Helvetica, Arial, sans-serif"
  themeVariables:
    fontSize: 22px
    lineColor: "#336791"
    primaryColor: "#eaf0f5"
    primaryTextColor: "#1a1a1a"
    primaryBorderColor: "#336791"
    edgeLabelBackground: "#fdfdfb"
---
erDiagram
    USUARIO ||--o{ EMPRESTIMO : "realiza"
    USUARIO ||--o{ RESERVA : "faz"
    OBRA ||--o{ RESERVA : "é alvo de"
    EXEMPLAR ||--o{ EMPRESTIMO : "é objeto de"
    FUNCIONARIO ||--o{ EMPRESTIMO : "registra"
    FUNCIONARIO ||--o{ MULTA : "perdoa"
    EMPRESTIMO ||--o{ RENOVACAO : "tem"
    EMPRESTIMO ||--o| MULTA : "gera"
